kubernetes/lamp/php.yaml
# By Sharon Campbell, Ken Simon, and Joe Beda for Heptio
#deploy the PHP and Apache container from rio05docker/web_server_panel

apiVersion: extensions/v1beta1
# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/
kind: Deployment
metadata:
  name: web-server-panel
  labels:
    rio/iotplatform: lamp
# number of PHP pods (replicas) to run
# increase this number if you need to scale PHP horizontally
# since we have 3, the LoadBalancer will serve our app from all 3
spec:
  replicas: 2
  # The number of old deployments you want to keep around
  revisionHistoryLimit: 5
  # make replicas of kubernetes objects with the label app: web_server_panel
  selector:
    matchLabels:
      app: web-server-panel
  # the pod template describes what type of pod to create
  # when the defined number of replicas are not up
  # in this case, the pod that will be created is the one labeled app: web_server_panel
  template:
    metadata:
      # this label is referenced by the selector for the Deployment, which creates pods
      # and by the selector for the Service, which creates the LoadBalancer
      labels:
        app: web-server-panel
    # details of what container(s) will actually be run in this pod
    spec:
      # deploys PHP and Apache and our custom application from the specified Docker Hub image
      containers:
      # deploys this custom PHP image from Docker Hub
      # https://hub.docker.com/r/rio05docker/web_server_panel/
      - image: rio05docker/web_server_panel:first_test
        # download a fresh copy of the image if available, even if it has the same version label
        imagePullPolicy: Always
        name: web-server-panel
        #reserving resources from our cluster
        resources:
          requests:
            cpu: 100m
            memory: 1Gi
        # env sets environment variables in the container
        # exactly like environment variables set from the command line
        livenessProbe:
          tcpSocket:
            port: 80
        # make our mysql pod available within the cluster on port 80
        ports:
        - containerPort: 80

---
# expose PHP and Apache on port 80 to the world through a load balancer

apiVersion: v1
# https://kubernetes.io/docs/concepts/services-networking/service/
kind: Service
metadata:
  # the name web here means you can reference the PHP pods
  # using the host web.default.svc.cluster.local from within the cluster
  name: panel
  labels:
    "rio/iotplatform": lamp
spec:
  ports:
  # make the service available on this port
  - name: http
    protocol: TCP
    port: 80
  - name: https
    protocol: TCP
    port: 443
  selector:
    # apply this service to the pod with the label app: mysql
    app: web-server-panel
  # a LoadBalancer makes this service available over the public internet
  # all of our PHP/Apache pods are load balanced behind a single public network address

  # this works because we have cloudprovider=aws set on the cluster
  # this actually provisions AWS Elastic Load Balancing https://aws.amazon.com/elasticloadbalancing/
  # try running "kubectl get service web -o wide" after you create the Service
  # You'll get a lengthy DNS name which you can use with a DNS CNAME entry with your own domain
  # like http://xxxxxxxxxxxxxxx.us-east-2.elb.amazonaws.com/
  # this is where the PHP app will be publicly viewable

  # https://kubernetes.io/docs/getting-started-guides/scratch/#cloud-providers
  # https://kubernetes.io/docs/concepts/services-networking/service/#type-loadbalancer
  type: NodePort
